# confpert

./: .gitignore  CHANGELOG.md  FUTURE_WORK.md  LICENSE  PHASE_1_PLAN.md  PHASE_2_PLAN.md  README.md  ULTRAPLAN_CONTEXT_2026-05-31.md  compute_estimate.md  preregistration.md  pyproject.toml
baselines/: cell_eval_audit.md  confpert_biolord_adamson.json  confpert_biolord_norman.json  confpert_biolord_replogle_k562.json  confpert_biolord_replogle_rpe1.json  confpert_biolord_tahoe.json  confpert_biolord_xcl_replogle_k562_to_rpe1.json  confpert_cpa_adamson.json  confpert_cpa_norman.json  confpert_cpa_replogle_k562.json  confpert_cpa_replogle_rpe1.json  confpert_cpa_tahoe.json  confpert_cpa_xcl_replogle_k562_to_rpe1.json  confpert_gears_adamson.json  confpert_gears_norman.json  confpert_gears_uncertainty_replogle_k562.json  confpert_gears_uncertainty_replogle_rpe1.json  confpert_scgen_adamson.json  confpert_scgen_norman.json  confpert_scgen_replogle_k562.json  confpert_scgen_replogle_rpe1.json  confpert_scgen_tahoe.json  confpert_scgen_xcl_replogle_k562_to_rpe1.json  confpert_state_adamson.json  confpert_state_norman.json  confpert_state_replogle_k562.json  confpert_state_replogle_rpe1.json  confpert_state_tahoe.json  confpert_svaeplus_adamson.json  confpert_svaeplus_norman.json  confpert_svaeplus_replogle_k562.json  confpert_svaeplus_replogle_rpe1.json  confpert_svaeplus_tahoe.json  results.json
data/: adamson_2016.h5ad  confpert_k3_tahoe_signatures.json  norman_2019.h5ad  replogle_k562_essential.h5ad  replogle_rpe1.h5ad
lit_notes/: _README.md  _synthesis.md  cellot_2023.md  (+35 more)
(+113 files in other folders)
